--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -824,7 +824,7 @@ $blue: #001689;
 
  $include-html-off-canvas-classes: $include-html-classes;
 
- $tabbar-bg: $primary-color;
+ $tabbar-bg: scale-color($primary-color, $lightness: -10%);
 // $tabbar-height: rem-calc(45);
 // $tabbar-icon-width: $tabbar-height;
 // $tabbar-line-height: $tabbar-height;
@@ -832,11 +832,11 @@ $blue: #001689;
 // $tabbar-middle-padding: 0 rem-calc(10);
 
 // Off Canvas Divider Styles
-// $tabbar-right-section-border: solid 1px scale-color($tabbar-bg, $lightness: 13%);
-// $tabbar-left-section-border: solid 1px scale-color($tabbar-bg, $lightness: -50%);
+ $tabbar-right-section-border: solid 1px scale-color($tabbar-bg, $lightness: -10%);
+ $tabbar-left-section-border: solid 1px scale-color($tabbar-bg, $lightness: -10%);
 
 // Off Canvas Tab Bar Headers
-// $tabbar-header-color: $white;
+ $tabbar-header-color: $secondary-color;
 // $tabbar-header-weight: $font-weight-bold;
 // $tabbar-header-line-height: $tabbar-height;
 // $tabbar-header-margin: 0;
@@ -848,16 +848,16 @@ $blue: #001689;
 
 // Off Canvas Menu List Variables
 // $off-canvas-label-padding: 0.3rem rem-calc(15);
- $off-canvas-label-color: $white;
+ $off-canvas-label-color: $secondary-color;
 // $off-canvas-label-text-transform: uppercase;
 // $off-canvas-label-font-size: rem-calc(12);
 // $off-canvas-label-font-weight: $font-weight-bold;
- $off-canvas-label-bg: $white;
+ $off-canvas-label-bg: $secondary-color;
  $off-canvas-label-border-top: 1px solid scale-color($off-canvas-label-bg, $lightness: 14%);
 // $off-canvas-label-border-bottom: none;
 // $off-canvas-label-margin:0;
 // $off-canvas-link-padding: rem-calc(10, 15);
- $off-canvas-link-color: $primary-color;
+ $off-canvas-link-color: $secondary-color;
 // $off-canvas-link-border-bottom: 1px solid scale-color($off-canvas-bg, $lightness: -25%);
 // $off-canvas-back-bg: $tuatara;
 // $off-canvas-back-border-top: $off-canvas-label-border-top;
