--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -430,7 +430,7 @@ $blue: #001689;
 // $crumb-radius: $global-radius;
 
 // We use these to set various text styles for breadcrumbs.
-// $crumb-font-size: rem-calc(11);
+ $crumb-font-size: rem-calc(15);
  $crumb-font-color: $white;
  $crumb-font-color-current: $white;
  $crumb-font-color-unavailable: $brown;
