--- a/woocommerce/_woocommerce.scss
+++ b/woocommerce/_woocommerce.scss
@@ -49,17 +49,29 @@ input[type="number"] {
 
 /**** product categories ****/
 .product-category {
-	margin-bottom: 1rem;
-	text-align: center;
 	@include grid-column(6, $float: left);
-	&:hover {
-		opacity: .80;
-	}
 }
-
 body.tax-product_cat .product-category {
 	@include grid-column(4, $float: left );
 }
+.product-category {
+	a {
+		background: $white;
+		display: block;
+		margin: 1rem auto;
+		padding: .5rem;
+		text-align: center;
+		&:hover {
+			opacity: .80;
+		}
+	}
+	&.adults a { background: $grey; }
+	&.childrens a { background: $pink; }
+	&.pre-teen a{  background: $purple; }
+	&.chains a { background: $green; }
+	h4 { color: $brown; }
+}
+
 
 /**** products ****/
 .add_to_cart_button {
