--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -32,7 +32,7 @@ html, body {
 				float: right;
 				input#rememberme {
 					float: right;
-					margin-left; .75rem;
+					margin-left: .75rem;
 				}
 			}
 			p.submit {
